# www-fpse

./: .gitignore  Main.hs  advanced_modules.ml  basic-modules.html  basic-modules.md  basic-ocaml.html  basic-ocaml.md  coding.html  coding.md  coding.shtml  coding_guidlines.md  contact.html  contact.md  contact.shtml  continuation-trees.ml  dateline.html  dateline.md  dateline.shtml  efficiency.html  efficiency.md  encoding-effects.ml  extra-header.html  footer.html  fp-universe.html  fp-universe.md  header.html  idiomatic-fp.html  idiomatic-fp.md  index-body.html  index.html  index.shtml  integrity.html  integrity.md  integrity.shtml  intro.html  intro.md  lazy-async.html  lazy-async.md  lecture-outline.html  lecture-outline.md  (+22 more)
assignments/: README.txt  assignment1.html  assignment1.md  assignment2.html  assignment2.md  assignment3.html  assignment3.md  assignment4.html  assignment4.md  assignment5.html  assignment5.md  assignment6.html  assignment6.md  assignment7.html  assignment7.md  mini-project.html  mini-project.md  project.html  project.md
css/: style-mobile.css  style-narrower.css  style.css
examples/: continuation-trees.ml  cool_school.ml  dune  matching.ml  mine_array.ml  mine_monadic.ml  mine_mutate.ml  minesweeper.ml  quickcheck_examples.ml  school.ml
examples/set-example/src/: dune  set_main.ml  string_set.ml  string_set.mli
js/: init.js
lecture/: advanced_modules.ml  algebraic-effects.html  algebraic-effects.md  algebraic-effects.ml  algebraic_effects.ml  async.html  async.md  basic-modules.html  basic-modules.md  basic-ocaml.html  basic-ocaml.md  (+38 more)
(+44 files in other folders)
