
(library
 (name string_set)
 (modules string_set) 
 (libraries core)
 (preprocess (pps bisect_ppx))
)

; To load libraries in a fresh utop top loop use command line
; `dune utop`
; or an equivalent means is to start utop and enter `#use_output "dune top";;`

; The below builds a main program executable
(executable
  (name set_main)
  (modules set_main)
  (libraries string_set core)
)
; to run executable type dune exec ./src/set_main.exe <search_string> <filename>
; OR could directly do `_build/default/src/set_main.exe <search_string> <filename>`